2009-12-17  Dave Korn  <dave.korn.cygwin@gmail.com>

	* deffilep.y (def_file_free): Add missing shadow parameter renaming.
	(def_file_print): Likewise.
	(def_stash_module): Likewise.
	(def_file_add_import): Likewise.

2009-12-11  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* deffilep.y: Fix shadowed variable warnings.
	* ldlang.c: Likewise.
	* ldmain.c: Likewise.
	* pe-dll.c: Likewise.
	* emultempl/elf32.em: Likewise.

2009-12-09  Alan Modra  <amodra@bigpond.net.au>

	PR ld/11012
	* emulparams/elf64ppc.sh (OTHER_GOT_RELOC_SECTIONS): Move .rela.opd ..
	(INITIAL_RELOC_SECTIONS): .. to here.  New define.
	* scripttempl/elf.sc: Expand INITIAL_RELOC_SECTIONS.

2009-12-04  Jie Zhang  <jie.zhang@analog.com>

	* ld.texinfo: Make it clear that --nmagic disables linking
	against shared libraries.

2009-11-30  Joseph Myers  <joseph@codesourcery.com>

	* configure: Regenerate.

2009-11-30  Alan Modra  <amodra@bigpond.net.au>

	PR ld/11006
	* lexsup.c (parse_args): Allow nested --start-group, --end-group.

2009-11-27  Tristan Gingold  <gingold@adacore.com>

	* pe-dll.c (pe_implied_import_dll): Return early if there is no
	export entries.

2009-11-26  Nick Clifton  <nickc@redhat.com>

	PR ld/10956
	* ld.h (struct args_type): Rename 'relax' field to
	'disable_target_specific_optimizations' and turn it into a
	tri-state variable.
	(RELAXATION_DISABLED_BY_DEFAULT): New macro.
	(RELAXATION_DISABLED_BY_USER): New macro.
	(RELAXATION_ENABLED): New macro.
	(DISABLE_RELAXATION): New macro.
	(ENABLE_RELAXATION): New macro.
	* lexsup (enum option_values): Add OPTION_NO_RELAX.
	(struct ld_options): Add --no-relax.
	(parse_args): Handle OPTION_NO_RELAX.  Use DISABLE_RELAXATION and
	ENABLE_RELAXATION macros.
	* ldlang.c (lang_relax_sections): Use RELAXATION_ENABLED macro.
	(lang_process): Likewise.
	* ldmain.c (main): Initialise
	disable_target_specific_optimizations field.
	(multiple_definition): Use RELAXATION_ENABLED macro.