@@ -1,5 +1,11 @@
 2009-12-17  Dave Korn  <dave.korn.cygwin@gmail.com>
 
+	* pe-dll.c (generate_reloc): Take account of wrapper options when
+	testing if a weak symbol is defined or not, and when it is not,
+	consider whether the default value requires a base reloc anyway.
+
+2009-12-17  Dave Korn  <dave.korn.cygwin@gmail.com>
+
 	* deffilep.y (def_file_free): Add missing shadow parameter renaming.
 	(def_file_print): Likewise.
 	(def_stash_module): Likewise.
